--- a/README.html
+++ b/README.html
@@ -17,8 +17,8 @@
   gtag('config', 'UA-1687066-2');
 </script>
 <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css' rel='stylesheet' integrity='sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==' crossorigin='anonymous'/>
-<meta description='The blog of Duncan Mac-Vicar P.'/>
-<link rel='alternate' type='application+rss/xml' title='The blog of Duncan Mac-Vicar P.' href='posts/rss.xml'/>
+<meta description='The blog of Shrisha Rao'/>
+<link rel='alternate' type='application+rss/xml' title='The blog of Shrisha Rao' href='posts/rss.xml'/>
 <link rel='stylesheet' href='css/index.css?v=c18771e4d9917f7bbeba0dc8707195c42a1cf1d75f55928214254bd81d1a0c6e'/>
 <link rel="stylesheet" href="css/site.css?v=9841668fc45f279d3f5281c3a156e94483f05a34811f7da683a607b35f8acef1" type="text/css">
 </head>
@@ -82,9 +82,9 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<section id="outline-container-org57496e8" class="outline-2">
-<h2 id="org57496e8">Introduction</h2>
-<div class="outline-text-2" id="text-org57496e8">
+<section id="outline-container-org30688d8" class="outline-2">
+<h2 id="org30688d8">Introduction</h2>
+<div class="outline-text-2" id="text-org30688d8">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a>.
 </p>
