--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   gtag('config', 'UA-1687066-2');
 </script>
 <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css' rel='stylesheet' integrity='sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==' crossorigin='anonymous'/>
-<meta description='The blog of Duncan Mac-Vicar P.'/>
-<link rel='alternate' type='application+rss/xml' title='The blog of Duncan Mac-Vicar P.' href='posts/rss.xml'/>
+<meta description='The blog of Shrisha Rao'/>
+<link rel='alternate' type='application+rss/xml' title='The blog of Shrisha Rao' href='posts/rss.xml'/>
 <link rel='stylesheet' href='css/index.css?v=c18771e4d9917f7bbeba0dc8707195c42a1cf1d75f55928214254bd81d1a0c6e'/>
 <link rel="stylesheet" href="css/site.css?v=9841668fc45f279d3f5281c3a156e94483f05a34811f7da683a607b35f8acef1" type="text/css">
 </head>
@@ -112,9 +112,9 @@ imagination. Prepare to be captivated, inspired, and perhaps even slightly mad,
 as we embark upon this exhilarating journey.
 </p>
 
-<section id="outline-container-org007ade2" class="outline-2 latest-section">
-<h2 id="org007ade2"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
-<div class="outline-text-2" id="text-org007ade2">
+<section id="outline-container-org4d8ee47" class="outline-2 latest-section">
+<h2 id="org4d8ee47"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
+<div class="outline-text-2" id="text-org4d8ee47">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">01 Apr 2024</span></span>  <a href="posts/ai_ml/list_of_ml_posts/index.html">Posts on AI/ML</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">01 Apr 2024</span></span>  <a href="posts/tutorials_list/list_of_tutorials/index.html">List of All Tutorials &amp; Notes</a><br></li>
