--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -44,20 +44,20 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org7a0e454">Introduction</a></li>
-<li><a href="#orgf3a0bde">Understanding Stable Diffusion</a></li>
-<li><a href="#org4ab2b70">How Stable Diffusion Works</a></li>
-<li><a href="#org7a73dad">Applications of Stable Diffusion</a></li>
-<li><a href="#org6ab18a3">Conclusion</a></li>
-<li><a href="#org92eb1fb">Code</a></li>
+<li><a href="#org89f818c">Introduction</a></li>
+<li><a href="#orgc7170ab">Understanding Stable Diffusion</a></li>
+<li><a href="#orgdfe61fb">How Stable Diffusion Works</a></li>
+<li><a href="#org335bfa4">Applications of Stable Diffusion</a></li>
+<li><a href="#org5ba1125">Conclusion</a></li>
+<li><a href="#orgb41fc2a">Code</a></li>
 </ul>
 </div>
 </nav>
 
 
-<section id="outline-container-org7a0e454" class="outline-2">
-<h2 id="org7a0e454">Introduction</h2>
-<div class="outline-text-2" id="text-org7a0e454">
+<section id="outline-container-org89f818c" class="outline-2">
+<h2 id="org89f818c">Introduction</h2>
+<div class="outline-text-2" id="text-org89f818c">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -68,9 +68,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-orgf3a0bde" class="outline-2">
-<h2 id="orgf3a0bde">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-orgf3a0bde">
+<section id="outline-container-orgc7170ab" class="outline-2">
+<h2 id="orgc7170ab">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orgc7170ab">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -88,9 +88,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-org4ab2b70" class="outline-2">
-<h2 id="org4ab2b70">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-org4ab2b70">
+<section id="outline-container-orgdfe61fb" class="outline-2">
+<h2 id="orgdfe61fb">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-orgdfe61fb">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -119,9 +119,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-org7a73dad" class="outline-2">
-<h2 id="org7a73dad">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org7a73dad">
+<section id="outline-container-org335bfa4" class="outline-2">
+<h2 id="org335bfa4">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org335bfa4">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -141,9 +141,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-org6ab18a3" class="outline-2">
-<h2 id="org6ab18a3">Conclusion</h2>
-<div class="outline-text-2" id="text-org6ab18a3">
+<section id="outline-container-org5ba1125" class="outline-2">
+<h2 id="org5ba1125">Conclusion</h2>
+<div class="outline-text-2" id="text-org5ba1125">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -166,9 +166,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-org92eb1fb" class="outline-2">
-<h2 id="org92eb1fb">Code</h2>
-<div class="outline-text-2" id="text-org92eb1fb">
+<section id="outline-container-orgb41fc2a" class="outline-2">
+<h2 id="orgb41fc2a">Code</h2>
+<div class="outline-text-2" id="text-orgb41fc2a">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
