--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@ imagination. Prepare to be captivated, inspired, and perhaps even slightly mad,
 as we embark upon this exhilarating journey.
 </p>
 
-<section id="outline-container-org4d8ee47" class="outline-2 latest-section">
-<h2 id="org4d8ee47"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
-<div class="outline-text-2" id="text-org4d8ee47">
+<section id="outline-container-orgaa03371" class="outline-2 latest-section">
+<h2 id="orgaa03371"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
+<div class="outline-text-2" id="text-orgaa03371">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">01 Apr 2024</span></span>  <a href="posts/ai_ml/list_of_ml_posts/index.html">Posts on AI/ML</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">01 Apr 2024</span></span>  <a href="posts/tutorials_list/list_of_tutorials/index.html">List of All Tutorials &amp; Notes</a><br></li>
