--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -44,20 +44,20 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org89f818c">Introduction</a></li>
-<li><a href="#orgc7170ab">Understanding Stable Diffusion</a></li>
-<li><a href="#orgdfe61fb">How Stable Diffusion Works</a></li>
-<li><a href="#org335bfa4">Applications of Stable Diffusion</a></li>
-<li><a href="#org5ba1125">Conclusion</a></li>
-<li><a href="#orgb41fc2a">Code</a></li>
+<li><a href="#orge4e6170">Introduction</a></li>
+<li><a href="#org53190df">Understanding Stable Diffusion</a></li>
+<li><a href="#orgb4847e3">How Stable Diffusion Works</a></li>
+<li><a href="#orge9dfa0b">Applications of Stable Diffusion</a></li>
+<li><a href="#orgcc03429">Conclusion</a></li>
+<li><a href="#orgf20d415">Code</a></li>
 </ul>
 </div>
 </nav>
 
 
-<section id="outline-container-org89f818c" class="outline-2">
-<h2 id="org89f818c">Introduction</h2>
-<div class="outline-text-2" id="text-org89f818c">
+<section id="outline-container-orge4e6170" class="outline-2">
+<h2 id="orge4e6170">Introduction</h2>
+<div class="outline-text-2" id="text-orge4e6170">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -68,9 +68,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-orgc7170ab" class="outline-2">
-<h2 id="orgc7170ab">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-orgc7170ab">
+<section id="outline-container-org53190df" class="outline-2">
+<h2 id="org53190df">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org53190df">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -88,9 +88,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-orgdfe61fb" class="outline-2">
-<h2 id="orgdfe61fb">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-orgdfe61fb">
+<section id="outline-container-orgb4847e3" class="outline-2">
+<h2 id="orgb4847e3">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-orgb4847e3">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -119,9 +119,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-org335bfa4" class="outline-2">
-<h2 id="org335bfa4">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org335bfa4">
+<section id="outline-container-orge9dfa0b" class="outline-2">
+<h2 id="orge9dfa0b">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orge9dfa0b">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -141,9 +141,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-org5ba1125" class="outline-2">
-<h2 id="org5ba1125">Conclusion</h2>
-<div class="outline-text-2" id="text-org5ba1125">
+<section id="outline-container-orgcc03429" class="outline-2">
+<h2 id="orgcc03429">Conclusion</h2>
+<div class="outline-text-2" id="text-orgcc03429">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -166,9 +166,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-orgb41fc2a" class="outline-2">
-<h2 id="orgb41fc2a">Code</h2>
-<div class="outline-text-2" id="text-orgb41fc2a">
+<section id="outline-container-orgf20d415" class="outline-2">
+<h2 id="orgf20d415">Code</h2>
+<div class="outline-text-2" id="text-orgf20d415">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
