--- a/tutorials/polyglot/index.html
+++ b/tutorials/polyglot/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 01 Apr. 2024 -->
+<!-- 02 Apr. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Polyglot</title>
@@ -44,7 +44,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgf209943">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
+<li><a href="#orga8eb566">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
 </ul>
 </div>
 </nav>
@@ -65,9 +65,9 @@
 </script>
 
 
-<section id="outline-container-orgf209943" class="outline-2">
-<h2 id="orgf209943">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
-<div class="outline-text-2" id="text-orgf209943">
+<section id="outline-container-orga8eb566" class="outline-2">
+<h2 id="orga8eb566">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
+<div class="outline-text-2" id="text-orga8eb566">
 <p>
 <a href="https://github.com/shrisharaob/polyglot">GitHub Repo</a><br>
 </p>
@@ -76,7 +76,7 @@
 </main>
 <footer id="postamble" class="status">
 <p class="author">Author: Shrisha Rao</p>
-<p class="date">Created: 01 Apr. 2024</p>
+<p class="date">Created: 02 Apr. 2024</p>
 </footer>
 </body>
 </html>
