--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 01 Apr. 2024 -->
+<!-- 02 Apr. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Playing with StableDiffusion: A Fascinating Algorithm for Image Generation</title>
@@ -44,20 +44,20 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orge4e6170">Introduction</a></li>
-<li><a href="#org53190df">Understanding Stable Diffusion</a></li>
-<li><a href="#orgb4847e3">How Stable Diffusion Works</a></li>
-<li><a href="#orge9dfa0b">Applications of Stable Diffusion</a></li>
-<li><a href="#orgcc03429">Conclusion</a></li>
-<li><a href="#orgf20d415">Code</a></li>
+<li><a href="#org6221886">Introduction</a></li>
+<li><a href="#org72da1f0">Understanding Stable Diffusion</a></li>
+<li><a href="#orgb85526b">How Stable Diffusion Works</a></li>
+<li><a href="#orgdf577a6">Applications of Stable Diffusion</a></li>
+<li><a href="#org6319319">Conclusion</a></li>
+<li><a href="#org031c9eb">Code</a></li>
 </ul>
 </div>
 </nav>
 
 
-<section id="outline-container-orge4e6170" class="outline-2">
-<h2 id="orge4e6170">Introduction</h2>
-<div class="outline-text-2" id="text-orge4e6170">
+<section id="outline-container-org6221886" class="outline-2">
+<h2 id="org6221886">Introduction</h2>
+<div class="outline-text-2" id="text-org6221886">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -68,9 +68,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-org53190df" class="outline-2">
-<h2 id="org53190df">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org53190df">
+<section id="outline-container-org72da1f0" class="outline-2">
+<h2 id="org72da1f0">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org72da1f0">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -88,9 +88,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-orgb4847e3" class="outline-2">
-<h2 id="orgb4847e3">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-orgb4847e3">
+<section id="outline-container-orgb85526b" class="outline-2">
+<h2 id="orgb85526b">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-orgb85526b">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -119,9 +119,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-orge9dfa0b" class="outline-2">
-<h2 id="orge9dfa0b">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-orge9dfa0b">
+<section id="outline-container-orgdf577a6" class="outline-2">
+<h2 id="orgdf577a6">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orgdf577a6">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -141,9 +141,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-orgcc03429" class="outline-2">
-<h2 id="orgcc03429">Conclusion</h2>
-<div class="outline-text-2" id="text-orgcc03429">
+<section id="outline-container-org6319319" class="outline-2">
+<h2 id="org6319319">Conclusion</h2>
+<div class="outline-text-2" id="text-org6319319">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -166,9 +166,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-orgf20d415" class="outline-2">
-<h2 id="orgf20d415">Code</h2>
-<div class="outline-text-2" id="text-orgf20d415">
+<section id="outline-container-org031c9eb" class="outline-2">
+<h2 id="org031c9eb">Code</h2>
+<div class="outline-text-2" id="text-org031c9eb">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
@@ -233,7 +233,7 @@ plt.show()
 </main>
 <footer id="postamble" class="status">
 <p class="author">Author: Shrisha Rao</p>
-<p class="date">Created: 01 Apr. 2024</p>
+<p class="date">Created: 02 Apr. 2024</p>
 </footer>
 </body>
 </html>
