--- a/README.html
+++ b/README.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 01 Apr. 2024 -->
+<!-- 02 Apr. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>My homepage with org-mode</title>
@@ -19,7 +19,6 @@
 <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css' rel='stylesheet' integrity='sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==' crossorigin='anonymous'/>
 <meta description='The blog of Shrisha Rao'/>
 <link rel='alternate' type='application+rss/xml' title='The blog of Shrisha Rao' href='posts/rss.xml'/>
-<link rel='stylesheet' href='css/index.css?v=c18771e4d9917f7bbeba0dc8707195c42a1cf1d75f55928214254bd81d1a0c6e'/>
 <link rel="stylesheet" href="css/site.css?v=9841668fc45f279d3f5281c3a156e94483f05a34811f7da683a607b35f8acef1" type="text/css">
 </head>
 <body>
@@ -82,9 +81,9 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<section id="outline-container-orgbc308b4" class="outline-2">
-<h2 id="orgbc308b4">Introduction</h2>
-<div class="outline-text-2" id="text-orgbc308b4">
+<section id="outline-container-org4aafb87" class="outline-2">
+<h2 id="org4aafb87">Introduction</h2>
+<div class="outline-text-2" id="text-org4aafb87">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a>.
 </p>
@@ -92,7 +91,7 @@ This setup based on <a href="https://orgmode.org">org-mode</a>.
 </section>
 </main>
 <footer id="postamble" class="status">
-<p>Last updated 01 Apr. 2024. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
+<p>Last updated 02 Apr. 2024. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
