--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 01 Apr. 2024 -->
+<!-- 02 Apr. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>noMad Scientist</title>
@@ -112,15 +112,15 @@ imagination. Prepare to be captivated, inspired, and perhaps even slightly mad,
 as we embark upon this exhilarating journey.
 </p>
 
-<section id="outline-container-orgaa03371" class="outline-2 latest-section">
-<h2 id="orgaa03371"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
-<div class="outline-text-2" id="text-orgaa03371">
+<section id="outline-container-org1b4cf24" class="outline-2 latest-section">
+<h2 id="org1b4cf24"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
+<div class="outline-text-2" id="text-org1b4cf24">
 <ul class="org-ul">
-<li><span class="timestamp-wrapper"><span class="timestamp">01 Apr 2024</span></span>  <a href="posts/ai_ml/list_of_ml_posts/index.html">Posts on AI/ML</a><br></li>
-<li><span class="timestamp-wrapper"><span class="timestamp">01 Apr 2024</span></span>  <a href="posts/tutorials_list/list_of_tutorials/index.html">List of All Tutorials &amp; Notes</a><br></li>
-<li><span class="timestamp-wrapper"><span class="timestamp">01 Apr 2024</span></span>  <a href="posts/poetry/faust/index.html">Goethe&rsquo;s Faust: The Limits of Enlightenment</a><br></li>
-<li><span class="timestamp-wrapper"><span class="timestamp">01 Apr 2024</span></span>  <a href="posts/poetry/the_broken_tower_crane/index.html">The Broken Tower</a><br></li>
-<li><span class="timestamp-wrapper"><span class="timestamp">01 Apr 2024</span></span>  <a href="posts/physics/qft/index.html">QFT</a><br></li>
+<li><span class="timestamp-wrapper"><span class="timestamp">02 Apr 2024</span></span>  <a href="posts/ai_ml/list_of_ml_posts/index.html">Posts on AI/ML</a><br></li>
+<li><span class="timestamp-wrapper"><span class="timestamp">02 Apr 2024</span></span>  <a href="posts/physics/spin_stats_theorem/index.html">Do we really understand the Spin Statistics theorem?</a><br></li>
+<li><span class="timestamp-wrapper"><span class="timestamp">02 Apr 2024</span></span>  <a href="posts/physics/qft/index.html">QFT</a><br></li>
+<li><span class="timestamp-wrapper"><span class="timestamp">02 Apr 2024</span></span>  <a href="posts/poetry/faust/index.html">Goethe&rsquo;s Faust: The Limits of Enlightenment</a><br></li>
+<li><span class="timestamp-wrapper"><span class="timestamp">02 Apr 2024</span></span>  <a href="posts/tutorials_list/list_of_tutorials/index.html">List of All Tutorials &amp; Notes</a><br></li>
 </ul>
 
 <p>
@@ -130,7 +130,7 @@ as we embark upon this exhilarating journey.
 </section>
 </main>
 <footer id="postamble" class="status">
-<p>Last updated 01 Apr. 2024. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
+<p>Last updated 02 Apr. 2024. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
